2007-03-12  Jeffrey Stedfast  <fejj@gnome.org>

	* src/uudecode.c (uudecode): Use a strcmp instead of comparing
	against a string literal (which was technically correct in this
	case, but the prettyification would be nice if "-" was specified
	in argv too). Fixes bug #408613.

2007-03-10  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-message.c (g_mime_message_get_all_recipients): New
	convenience function to get To, Cc, and Bcc recipients all in a
	single list.

2007-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-message.h: Moved g_mime_message_get_body() into the
	deprecated block.

2007-02-11  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c: Removed the need for the ctype isblank()
	function.

	* gmime/gmime-param.c (decode_int): Need to use (unsigned char *)
	when passing indexes to ctype functions.

2007-02-10  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-charset.c: Changed the names of the charset format
	macros to coincide with the new names output by iconv-charset.c.
	(g_mime_charset_iconv_name): Use the new macro names.

	* iconv-detect.c: Use %u instead of %d, also changed the names of
	the format #defines that we print out.

	* gmime/gmime-utils.c (g_mime_utils_quote_string): Optimise a
	smidgen.
	(g_mime_utils_unquote_string): Fixed, this wasn't working right...

2007-02-09  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-stream-filter.c (stream_write): Instead of comparing
	the return value of the source stream write() to our input length
	to write, compare to -1. We can't assume the the value the source
	stream will return will be what we expected, all we can do is
	check for error.

	* gmime/gmime-part.c: Same as below.

	* gmime/gmime-filter-basic.c: Fixes to signedness compile warnings
	and updated to reflect gmime-utils.h changes.

	* gmime/gmime-multipart.c (multipart_set_boundary): Updated to
	reflect gmime-utils.h changes.

	* gmime/gmime-stream.c (g_mime_stream_writev): If any of the
	writes fail, return -1.
